<resources>
    <string name="app_name">DoItSolo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Activity titles-->
    <string name="title_rewards_create_new">Create New Reward</string>
    <string name="title_rewards_edit_existing">Edit Existing Reward</string>
    <string name="title_rewards">Rewards</string>

    <!--For reward item fragment-->
    <string name="reward_buy">Buy</string>
    <string name="reward_bought">Bought</string>
    <string name="reward_use">Use</string>
    <string name="reward_used">Used</string>
    <string name="reward_reset">Reset</string>
    <string name="reward_edit">Edit</string>
    <string name="reward_last_used">Last Used</string>
    <string name="reward_last_bought">Last Bought</string>
    <string name="reward_last_edited">Last Edited</string>
    <string name="reward_created">Created</string>

    <!--For reward item types-->
    <string-array name="reward_types">
        <item>Repeatable</item>
        <item>One-Time</item>
        <item>Limited</item>
    </string-array>
    <string name="reward_type_repeatable">Repeatable</string>
    <string name="reward_type_one_time">One-Time</string>
    <string name="reward_type_limited">Limited</string>

    <!--For reward add/edit activity-->
    <string name="reward_name">Name</string>
    <string name="reward_name_placeholder">Name</string>
    <string name="reward_price">Price</string>
    <string name="reward_price_placeholder">0</string>
    <string name="reward_type">Type</string>
    <string name="reward_description">Description</string>
    <string name="reward_description_placeholder">Type your description here…</string>
    <string name="reward_save">Save</string>
    <string name="reward_cancel">Cancel</string>
    <string name="reward_delete">Delete</string>
    <string name="reward_expand_item">Expand reward item</string>

    <!--For reward delete dialog-->
    <string name="reward_are_you_sure">Are you sure?</string>
    <string name="reward_are_you_sure_expound">Are you sure you want to delete this reward? It will be lost forever!</string>
    <string name="TopicTextView">TASKS</string>
    <string name="ItemTextView">Doing Home work</string>
    <string name="ItemTextView2">Buy game for PS4</string>
    <string name="ItemTextView3">Get key set from brother</string>
    <string name="ItemTextView4">Format Laptop</string>
    <string name="ItemTextView5">Get earphone</string>
    <string name="DiscriptionText">Homework teaches students how to problem solve. Homework gives student another opportunity to review class material. Homework gives parents a chance to see what is being learned in school. Homework teaches students how to take responsibility for their part in the educational process.</string>
    <string name="AddTopic">ADD NEW</string>
    <string name="Datehint">JAN 01 2022</string>
    <string name="Titlehint">Enter Title</string>
    <string name="Discriptionhint">Enter Discription</string>
    <string name="AddAdd">Add</string>
    <string name="AddCancel">Cancel</string>
    <string name="editconfirm">Update</string>
    <string name="editCancel">Delete</string>
    <string name="editTopic">EDIT</string>


    <string name="TopicTextView1">MY BUDGET</string>
    <string name="TotalIncomeHeader">Total Income</string>
    <string name="TotalExpencesHeader">Total Expences</string>
    <string name="TotalLeftHeader">Total Left</string>
    <string name="Left">55000.00</string>

    <string name="IncomeHeader">My Income</string>
    <string name="IncomeText">Salary</string>
    <string name="IncomeText2">Stocks</string>
    <string name="IncomeAmout">70000.00</string>
    <string name="IncomeAmout2">15000.00</string>
    <string name="TotalIncome">Total Income</string>
    <string name="TotalIncomeAmout">85000.00</string>
    <string name="Add">ADD</string>
    <string name="done">DONE</string>

    <string name="ExpenceHeader">My Expences</string>
    <string name="ExpenceText1">Groceries</string>
    <string name="ExpenceAmout1">5000.00</string>
    <string name="ExpenceText2">Electricity</string>
    <string name="ExpenceAmout2">3000.00</string>
    <string name="ExpenceText3">Fuels</string>
    <string name="ExpenceAmout3">5000.00</string>
    <string name="ExpenceText4">Water</string>
    <string name="ExpenceAmout4">2000.00</string>
    <string name="TotalExpencesAmount">15000.00</string>


    <string name="ag1_title">Add your Goal</string>
    <string name="ag1_hint_1">Enter Your Goal here</string>
    <string name="ag1_hint2">Description/comment</string>


</resources>