<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/one"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="7dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/expandLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/goalTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/ItemTextView"
            android:textSize="19sp"
            android:textStyle="bold"></TextView>

        <!--        <CheckBox-->
        <!--            android:id="@+id/item"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="12dp"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:checked="true">-->
        <!--        </CheckBox>-->



        <TextView
            android:id="@+id/GoalDiscriptionTv"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/goalTitleTv"
            android:layout_gravity="bottom"
            android:padding="12dp"
            android:text="@string/DiscriptionText"
            android:textSize="12sp"
            ></TextView>
        <TextView
            android:id="@+id/dateTv"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/Datehint"
            android:textSize="15sp"
            android:layout_below="@+id/GoalDiscriptionTv"></TextView>

    </RelativeLayout>
</androidx.cardview.widget.CardView>

