<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bacground"

    >
  <RelativeLayout
      android:id="@+id/menuBar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dp"
      android:layout_marginTop="5dp"
      android:layout_marginRight="5dp"
      android:layout_marginBottom="20dp"
      android:orientation="vertical"
      >

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/menu4"

        ></Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/TopicTextView"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold">
    </TextView>

  </RelativeLayout>



  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="20dip"
      android:orientation="vertical"
      >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:cardElevation="0dp"
        android:layout_marginTop="10dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView">


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <TextView
            android:id="@+id/income"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/black"
            android:text="@string/TotalIncomeHeader"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold" />

      </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView">


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <TextView
            android:id="@+id/incomesamount"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/IncomeAmout"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="20dp"
            android:textStyle="bold" />

      </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView">


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/expence"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/black"
            android:text="@string/TotalExpencesHeader"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold" />
      </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView">


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <TextView
            android:id="@+id/expensesamount"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/grey"
            android:text="@string/TotalExpencesAmount"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="20dp"
            android:textStyle="bold" />

      </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView">


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/left"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"
            android:text="@string/TotalLeftHeader"
            android:layout_centerHorizontal="true"
            />
      </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView">


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <TextView
            android:id="@+id/leftamount"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/grey"
            android:text="@string/Left"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="20dp"
            android:textStyle="bold" />

      </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>




    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

      <Button
          android:id="@+id/incomebtn"
          android:layout_width="200dp"
          android:layout_height="60dp"
          android:layout_alignParentBottom="true"
          android:layout_centerInParent="true"
          android:layout_marginBottom="100dp"
          android:background="@drawable/roundbutton3"
          android:text="INCOME"
          android:textColor="@color/white"
          android:textSize="19dp"
          android:textStyle="bold">

      </Button>


      <Button
         android:id="@+id/expenceBtn"
          android:layout_width="200dp"
          android:layout_height="60dp"
          android:layout_alignParentBottom="true"
          android:layout_centerInParent="true"
          android:layout_marginBottom="20dp"
          android:backgroundTint="@color/yellow"
          android:background="@drawable/roundbutton3"
          android:text="EXPECES"
          android:textColor="@color/white"
          android:textSize="19dp"
          android:textStyle="bold"
          tools:ignore="OnClick">

      </Button>


    </RelativeLayout>
  </LinearLayout>




</LinearLayout>